# stock-logistics-reporting

./: .copier-answers.yml  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  oca_dependencies.txt  test-requirements.txt
bill_of_lading_webkit/: __openerp__.py  report.xml  stock.py
delivery_line_sale_line_position/: README.rst  __manifest__.py
group_deliveryslip_report_by_pack/: README.rst  __init__.py  __manifest__.py
pickup_date_on_delivery_order/: __openerp__.py  stock.py  stock_view.xml
product_category_on_stock_quant_view/: README.rst  __manifest__.py
report_stock_spreadsheet/: .travis.yml  README.md  README.rst  __init__.py  __openerp__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
stock_account_quantity_history_location/: README.rst  __init__.py  __manifest__.py
stock_account_valuation_discrepancy_adjust/: README.rst  __init__.py  __manifest__.py
stock_account_valuation_report/: README.rst  __manifest__.py
stock_aggregated_shipment_documents_webkit/: __init__.py  __openerp__.py  mail_template.xml  report.xml  stock_picking.py  stock_view.xml
stock_analysis/: README.rst  __init__.py  __manifest__.py  __openerp__.py
stock_analysis_forecast/: README.rst  __init__.py  __openerp__.py
stock_average_daily_sale/: README.rst  __manifest__.py
stock_bill_of_lading_webkit/: __init__.py  __openerp__.py  report.xml  stock_view.xml
stock_card_report/: README.rst  __init__.py  __manifest__.py
stock_delivery_sale_section_and_note/: README.rst  __manifest__.py
stock_forecast_report/: README.rst  (+1 more)
(+859 files in other folders)
