[project]
name = "odoo-addons-oca-stock-logistics-reporting"
version = "17.0.20240701.0"
dependencies = [
    "odoo-addon-stock_move_value_report>=17.0dev,<17.1dev",
    "odoo-addon-stock_picking_report_valued>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
